# KV-Codec

./: .gitignore  CHANGELOG.md  LICENSE  README.md  benchmark_throughput.py  pyproject.toml  test_system.py
.github/workflows/: ci.yml
examples/: hf_integration.py  quickstart.py
kvcodec/: __init__.py  _residual.py  codec.py  codec_joint.py  codec_layer.py  codec_seq.py  config.py  detector.py  predictor.py  selector.py  system.py
tests/: conftest.py  test_codecs.py  test_integration.py
