[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kvcodec"
version = "0.1.0"
description = "Adaptive KV cache compression for transformer models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
kvcodec-benchmark = "benchmark_throughput:run"

[tool.setuptools.packages.find]
include = ["kvcodec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that load a real model (deselect with -m 'not slow')",
]
